src/parser/gen/PyforelParser.cpp

// Generated from /home/andersonjwan/Projects/pyforel/build/antlr/grammars/PyforelParser.g4 by ANTLR 4.12.0


#include "PyforelParserVisitor.h"

#include "PyforelParser.h"


using namespace antlrcpp;
using namespace gen;

using namespace antlr4;

namespace {

struct PyforelParserStaticData final {
  PyforelParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  PyforelParserStaticData(const PyforelParserStaticData&) = delete;
  PyforelParserStaticData(PyforelParserStaticData&&) = delete;
  PyforelParserStaticData& operator=(const PyforelParserStaticData&) = delete;
  PyforelParserStaticData& operator=(PyforelParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag pyforelparserParserOnceFlag;
PyforelParserStaticData *pyforelparserParserStaticData = nullptr;

void pyforelparserParserInitialize() {
  assert(pyforelparserParserStaticData == nullptr);
  auto staticData = std::make_unique<PyforelParserStaticData>(
    std::vector<std::string>{
      "start", "program", "statement", "simpleStatement", "functionCallStatement", 
      "argList", "compoundStatement", "ifStatement", "elifStatement", "elseStatement", 
      "clauseStatement", "functionDefinitionStatement", "paramList", "parameter", 
      "temporalStatement", "bounds", "freezeTimeStatement", "objectQualifierStatement", 
      "newScope"
    },
    std::vector<std::string>{
      "", "", "", "", "'if'", "'elif'", "'else'", "'not'", "'and'", "'or'", 
      "'fn'", "'eventually'", "'always'", "'next'", "'within'", "'with'", 
      "'keep'", "'upto'", "'release'", "'in'", "'from'", "'to'", "'true'", 
      "'false'", "'exists'", "'forall'", "'at'", "'@'", "'&'", "'''", "'*'", 
      "'|'", "'^'", "':'", "','", "'$'", "'.'", "'='", "'!'", "'`'", "'#'", 
      "'-'", "'%'", "'+'", "'\\u003F'", "'\"'", "';'", "'~'", "'_'", "'/'", 
      "'\\'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'('", "')'", "", 
      "", "'inf'"
    },
    std::vector<std::string>{
      "", "Indent", "Dedent", "Newline", "If", "ElseIf", "Else", "Not", 
      "And", "Or", "Fn", "Eventually", "Always", "Next", "Within", "With", 
      "Keep", "Upto", "Release", "In", "From", "To", "True", "False", "Exists", 
      "Forall", "AtWord", "At", "Ampersand", "Apostrophe", "Asterick", "Bar", 
      "Caret", "Colon", "Comma", "DollarSign", "Dot", "Equal", "ExclamationMark", 
      "GraveAccent", "Hash", "Minus", "PercentSign", "Plus", "QuestionMark", 
      "QuotationMark", "Semicolon", "Tilde", "Underscore", "Slash", "Backslash", 
      "LeftBrace", "RightBrace", "LeftBracket", "RightBracket", "LeftChevron", 
      "RightChevron", "LeftParenthesis", "RightParenthesis", "BlockComment", 
      "LineComment", "Infinity", "Scalar", "Integer", "DecimalInteger", 
      "BinaryInteger", "OctalInteger", "HexInteger", "Floating", "PointFloat", 
      "ExponentFloat", "Identifier", "Whitespace"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  pyforelparserParserStaticData = staticData.release();
}

}

PyforelParser::PyforelParser(TokenStream *input) : PyforelParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

PyforelParser::PyforelParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  PyforelParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *pyforelparserParserStaticData->atn, pyforelparserParserStaticData->decisionToDFA, pyforelparserParserStaticData->sharedContextCache, options);
}

PyforelParser::~PyforelParser() {
  delete _interpreter;
}

const atn::ATN& PyforelParser::getATN() const {
  return *pyforelparserParserStaticData->atn;
}

std::string PyforelParser::getGrammarFileName() const {
  return "PyforelParser.g4";
}

const std::vector<std::string>& PyforelParser::getRuleNames() const {
  return pyforelparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& PyforelParser::getVocabulary() const {
  return pyforelparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView PyforelParser::getSerializedATN() const {
  return pyforelparserParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

PyforelParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyforelParser::ProgramContext* PyforelParser::StartContext::program() {
  return getRuleContext<PyforelParser::ProgramContext>(0);
}

tree::TerminalNode* PyforelParser::StartContext::EOF() {
  return getToken(PyforelParser::EOF, 0);
}


size_t PyforelParser::StartContext::getRuleIndex() const {
  return PyforelParser::RuleStart;
}


std::any PyforelParser::StartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitStart(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::StartContext* PyforelParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, PyforelParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    program();
    setState(39);
    match(PyforelParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

PyforelParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<PyforelParser::StatementContext *> PyforelParser::ProgramContext::statement() {
  return getRuleContexts<PyforelParser::StatementContext>();
}

PyforelParser::StatementContext* PyforelParser::ProgramContext::statement(size_t i) {
  return getRuleContext<PyforelParser::StatementContext>(i);
}


size_t PyforelParser::ProgramContext::getRuleIndex() const {
  return PyforelParser::RuleProgram;
}


std::any PyforelParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::ProgramContext* PyforelParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 2, PyforelParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 144115188205894672) != 0) || _la == PyforelParser::Identifier) {
      setState(41);
      statement();
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

PyforelParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::StatementContext::LeftParenthesis() {
  return getToken(PyforelParser::LeftParenthesis, 0);
}

PyforelParser::StatementContext* PyforelParser::StatementContext::statement() {
  return getRuleContext<PyforelParser::StatementContext>(0);
}

tree::TerminalNode* PyforelParser::StatementContext::RightParenthesis() {
  return getToken(PyforelParser::RightParenthesis, 0);
}

std::vector<PyforelParser::SimpleStatementContext *> PyforelParser::StatementContext::simpleStatement() {
  return getRuleContexts<PyforelParser::SimpleStatementContext>();
}

PyforelParser::SimpleStatementContext* PyforelParser::StatementContext::simpleStatement(size_t i) {
  return getRuleContext<PyforelParser::SimpleStatementContext>(i);
}

tree::TerminalNode* PyforelParser::StatementContext::Newline() {
  return getToken(PyforelParser::Newline, 0);
}

std::vector<tree::TerminalNode *> PyforelParser::StatementContext::Semicolon() {
  return getTokens(PyforelParser::Semicolon);
}

tree::TerminalNode* PyforelParser::StatementContext::Semicolon(size_t i) {
  return getToken(PyforelParser::Semicolon, i);
}

PyforelParser::CompoundStatementContext* PyforelParser::StatementContext::compoundStatement() {
  return getRuleContext<PyforelParser::CompoundStatementContext>(0);
}


size_t PyforelParser::StatementContext::getRuleIndex() const {
  return PyforelParser::RuleStatement;
}


std::any PyforelParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::StatementContext* PyforelParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, PyforelParser::RuleStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(65);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PyforelParser::LeftParenthesis: {
        enterOuterAlt(_localctx, 1);
        setState(47);
        match(PyforelParser::LeftParenthesis);
        setState(48);
        statement();
        setState(49);
        match(PyforelParser::RightParenthesis);
        break;
      }

      case PyforelParser::True:
      case PyforelParser::False:
      case PyforelParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(51);
        simpleStatement();
        setState(56);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(52);
            match(PyforelParser::Semicolon);
            setState(53);
            simpleStatement(); 
          }
          setState(58);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
        }
        setState(60);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == PyforelParser::Semicolon) {
          setState(59);
          match(PyforelParser::Semicolon);
        }
        setState(62);
        match(PyforelParser::Newline);
        break;
      }

      case PyforelParser::If:
      case PyforelParser::Fn:
      case PyforelParser::Eventually:
      case PyforelParser::Always:
      case PyforelParser::Next:
      case PyforelParser::Exists:
      case PyforelParser::Forall:
      case PyforelParser::AtWord: {
        enterOuterAlt(_localctx, 3);
        setState(64);
        compoundStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleStatementContext ------------------------------------------------------------------

PyforelParser::SimpleStatementContext::SimpleStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyforelParser::FunctionCallStatementContext* PyforelParser::SimpleStatementContext::functionCallStatement() {
  return getRuleContext<PyforelParser::FunctionCallStatementContext>(0);
}

tree::TerminalNode* PyforelParser::SimpleStatementContext::True() {
  return getToken(PyforelParser::True, 0);
}

tree::TerminalNode* PyforelParser::SimpleStatementContext::False() {
  return getToken(PyforelParser::False, 0);
}

tree::TerminalNode* PyforelParser::SimpleStatementContext::Identifier() {
  return getToken(PyforelParser::Identifier, 0);
}


size_t PyforelParser::SimpleStatementContext::getRuleIndex() const {
  return PyforelParser::RuleSimpleStatement;
}


std::any PyforelParser::SimpleStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitSimpleStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::SimpleStatementContext* PyforelParser::simpleStatement() {
  SimpleStatementContext *_localctx = _tracker.createInstance<SimpleStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, PyforelParser::RuleSimpleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(71);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(67);
      functionCallStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(68);
      match(PyforelParser::True);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(69);
      match(PyforelParser::False);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(70);
      match(PyforelParser::Identifier);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionCallStatementContext ------------------------------------------------------------------

PyforelParser::FunctionCallStatementContext::FunctionCallStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::FunctionCallStatementContext::Identifier() {
  return getToken(PyforelParser::Identifier, 0);
}

tree::TerminalNode* PyforelParser::FunctionCallStatementContext::LeftParenthesis() {
  return getToken(PyforelParser::LeftParenthesis, 0);
}

tree::TerminalNode* PyforelParser::FunctionCallStatementContext::RightParenthesis() {
  return getToken(PyforelParser::RightParenthesis, 0);
}

PyforelParser::ArgListContext* PyforelParser::FunctionCallStatementContext::argList() {
  return getRuleContext<PyforelParser::ArgListContext>(0);
}


size_t PyforelParser::FunctionCallStatementContext::getRuleIndex() const {
  return PyforelParser::RuleFunctionCallStatement;
}


std::any PyforelParser::FunctionCallStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitFunctionCallStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::FunctionCallStatementContext* PyforelParser::functionCallStatement() {
  FunctionCallStatementContext *_localctx = _tracker.createInstance<FunctionCallStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, PyforelParser::RuleFunctionCallStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(PyforelParser::Identifier);
    setState(74);
    match(PyforelParser::LeftParenthesis);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PyforelParser::Identifier) {
      setState(75);
      argList();
    }
    setState(78);
    match(PyforelParser::RightParenthesis);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgListContext ------------------------------------------------------------------

PyforelParser::ArgListContext::ArgListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::ArgListContext::Identifier() {
  return getToken(PyforelParser::Identifier, 0);
}

tree::TerminalNode* PyforelParser::ArgListContext::Comma() {
  return getToken(PyforelParser::Comma, 0);
}

PyforelParser::ArgListContext* PyforelParser::ArgListContext::argList() {
  return getRuleContext<PyforelParser::ArgListContext>(0);
}


size_t PyforelParser::ArgListContext::getRuleIndex() const {
  return PyforelParser::RuleArgList;
}


std::any PyforelParser::ArgListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitArgList(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::ArgListContext* PyforelParser::argList() {
  ArgListContext *_localctx = _tracker.createInstance<ArgListContext>(_ctx, getState());
  enterRule(_localctx, 10, PyforelParser::RuleArgList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(80);
      match(PyforelParser::Identifier);
      setState(81);
      match(PyforelParser::Comma);
      setState(82);
      argList();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(83);
      match(PyforelParser::Identifier);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CompoundStatementContext ------------------------------------------------------------------

PyforelParser::CompoundStatementContext::CompoundStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

PyforelParser::IfStatementContext* PyforelParser::CompoundStatementContext::ifStatement() {
  return getRuleContext<PyforelParser::IfStatementContext>(0);
}

PyforelParser::FunctionDefinitionStatementContext* PyforelParser::CompoundStatementContext::functionDefinitionStatement() {
  return getRuleContext<PyforelParser::FunctionDefinitionStatementContext>(0);
}

PyforelParser::TemporalStatementContext* PyforelParser::CompoundStatementContext::temporalStatement() {
  return getRuleContext<PyforelParser::TemporalStatementContext>(0);
}

PyforelParser::FreezeTimeStatementContext* PyforelParser::CompoundStatementContext::freezeTimeStatement() {
  return getRuleContext<PyforelParser::FreezeTimeStatementContext>(0);
}

PyforelParser::ObjectQualifierStatementContext* PyforelParser::CompoundStatementContext::objectQualifierStatement() {
  return getRuleContext<PyforelParser::ObjectQualifierStatementContext>(0);
}


size_t PyforelParser::CompoundStatementContext::getRuleIndex() const {
  return PyforelParser::RuleCompoundStatement;
}


std::any PyforelParser::CompoundStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitCompoundStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::CompoundStatementContext* PyforelParser::compoundStatement() {
  CompoundStatementContext *_localctx = _tracker.createInstance<CompoundStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, PyforelParser::RuleCompoundStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case PyforelParser::If: {
        enterOuterAlt(_localctx, 1);
        setState(86);
        ifStatement();
        break;
      }

      case PyforelParser::Fn: {
        enterOuterAlt(_localctx, 2);
        setState(87);
        functionDefinitionStatement();
        break;
      }

      case PyforelParser::Eventually:
      case PyforelParser::Always:
      case PyforelParser::Next: {
        enterOuterAlt(_localctx, 3);
        setState(88);
        temporalStatement();
        break;
      }

      case PyforelParser::AtWord: {
        enterOuterAlt(_localctx, 4);
        setState(89);
        freezeTimeStatement();
        break;
      }

      case PyforelParser::Exists:
      case PyforelParser::Forall: {
        enterOuterAlt(_localctx, 5);
        setState(90);
        objectQualifierStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStatementContext ------------------------------------------------------------------

PyforelParser::IfStatementContext::IfStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::IfStatementContext::If() {
  return getToken(PyforelParser::If, 0);
}

PyforelParser::ClauseStatementContext* PyforelParser::IfStatementContext::clauseStatement() {
  return getRuleContext<PyforelParser::ClauseStatementContext>(0);
}

tree::TerminalNode* PyforelParser::IfStatementContext::Colon() {
  return getToken(PyforelParser::Colon, 0);
}

PyforelParser::NewScopeContext* PyforelParser::IfStatementContext::newScope() {
  return getRuleContext<PyforelParser::NewScopeContext>(0);
}

std::vector<PyforelParser::ElifStatementContext *> PyforelParser::IfStatementContext::elifStatement() {
  return getRuleContexts<PyforelParser::ElifStatementContext>();
}

PyforelParser::ElifStatementContext* PyforelParser::IfStatementContext::elifStatement(size_t i) {
  return getRuleContext<PyforelParser::ElifStatementContext>(i);
}

PyforelParser::ElseStatementContext* PyforelParser::IfStatementContext::elseStatement() {
  return getRuleContext<PyforelParser::ElseStatementContext>(0);
}


size_t PyforelParser::IfStatementContext::getRuleIndex() const {
  return PyforelParser::RuleIfStatement;
}


std::any PyforelParser::IfStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitIfStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::IfStatementContext* PyforelParser::ifStatement() {
  IfStatementContext *_localctx = _tracker.createInstance<IfStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, PyforelParser::RuleIfStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(PyforelParser::If);
    setState(94);
    clauseStatement(0);
    setState(95);
    match(PyforelParser::Colon);
    setState(96);
    newScope();
    setState(100);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == PyforelParser::ElseIf) {
      setState(97);
      elifStatement();
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == PyforelParser::Else) {
      setState(103);
      elseStatement();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElifStatementContext ------------------------------------------------------------------

PyforelParser::ElifStatementContext::ElifStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::ElifStatementContext::ElseIf() {
  return getToken(PyforelParser::ElseIf, 0);
}

tree::TerminalNode* PyforelParser::ElifStatementContext::Colon() {
  return getToken(PyforelParser::Colon, 0);
}

PyforelParser::NewScopeContext* PyforelParser::ElifStatementContext::newScope() {
  return getRuleContext<PyforelParser::NewScopeContext>(0);
}


size_t PyforelParser::ElifStatementContext::getRuleIndex() const {
  return PyforelParser::RuleElifStatement;
}


std::any PyforelParser::ElifStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitElifStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::ElifStatementContext* PyforelParser::elifStatement() {
  ElifStatementContext *_localctx = _tracker.createInstance<ElifStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, PyforelParser::RuleElifStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(PyforelParser::ElseIf);
    setState(107);
    match(PyforelParser::Colon);
    setState(108);
    newScope();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElseStatementContext ------------------------------------------------------------------

PyforelParser::ElseStatementContext::ElseStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::ElseStatementContext::Else() {
  return getToken(PyforelParser::Else, 0);
}

tree::TerminalNode* PyforelParser::ElseStatementContext::Colon() {
  return getToken(PyforelParser::Colon, 0);
}

PyforelParser::NewScopeContext* PyforelParser::ElseStatementContext::newScope() {
  return getRuleContext<PyforelParser::NewScopeContext>(0);
}


size_t PyforelParser::ElseStatementContext::getRuleIndex() const {
  return PyforelParser::RuleElseStatement;
}


std::any PyforelParser::ElseStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<PyforelParserVisitor*>(visitor))
    return parserVisitor->visitElseStatement(this);
  else
    return visitor->visitChildren(this);
}

PyforelParser::ElseStatementContext* PyforelParser::elseStatement() {
  ElseStatementContext *_localctx = _tracker.createInstance<ElseStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, PyforelParser::RuleElseStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(PyforelParser::Else);
    setState(111);
    match(PyforelParser::Colon);
    setState(112);
    newScope();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClauseStatementContext ------------------------------------------------------------------

PyforelParser::ClauseStatementContext::ClauseStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* PyforelParser::ClauseStatementContext::LeftParenthesis() {
  return getToken(PyforelParser::LeftParenthesis, 0);
}

std::vector<PyforelParser::ClauseStatementContext *> PyforelParser::ClauseStatementContext::clauseStatement() {
  return getRuleContexts<PyforelParser::ClauseStatementContext>();
}

PyforelParser::ClauseStatementContext* PyforelParser::ClauseStatementContext::clauseStatement(size_t i) {
  return getRuleContext<PyforelParser::ClauseStatementContext>(i);
}

tree::TerminalNode* PyforelParser::ClauseStatementContext::RightParenthesis() {
  return getToken(PyforelParser::RightParenthesis, 0);
}

tree::TerminalNode* PyforelParser::ClauseStatementContext::Not() {
  return getToken(PyforelParser::Not, 0);
}

PyforelParser::SimpleStatementContext* PyforelParser::ClauseStatementContext::simpleStatement() {
  return getRuleContext<PyforelParser::SimpleStatementContext>(0);
}

tree::TerminalNode* PyforelParser::ClauseStatementContext::And() {
  return getToken(PyforelParser::And, 0);
}
